--- a/html/repair_list_manager.html
+++ b/html/repair_list_manager.html
@@ -85,9 +85,8 @@
         </div>
     </div>
 </body>
-<script type="text/javascript" src="../plugin/rem.js"></script>
-<script type="text/javascript" src="../plugin/jquery.js"></script>
 <script type="text/javascript" src="../js/support.js"></script>
+<script type="text/javascript" src="../js/common.js"></script>
 <script>
     $(document).ready(function(){
         $(".topbar li").on("click",function(){
