--- a/html/repair_add_manager.html
+++ b/html/repair_add_manager.html
@@ -12,12 +12,12 @@
       <div class="wrapper">
         <div class="form">
               <div class="infoCon">
-                <p class="username"><label>报修人</label><input type="text" placeholder="请填写报修人姓名" /></p>
-                <p class="contact"><label>联系人</label><input type="text" placeholder="请填写房源联系人" /></p>
-                <p class="phone"><label>手机号</label><input type="text" placeholder="请填写手机号" /></p>
-                <p class="addr"><label>报修地址</label><a href="">请选择</a></p>
-                <p class="type"><label>报修类型</label><select><option>请选择</option></select></p>
-                <p class="category"><label>报修分类</label><select><option>请选择</option></select></p>
+                <div class="username"><label>报修人</label><p><input type="text" placeholder="请填写报修人姓名" /></p></div>
+                <div class="contact"><label>联系人</label><p><input type="text" placeholder="请填写房源联系人" /></p></div>
+                <div class="phone"><label>手机号</label><p><input type="text" placeholder="请填写手机号" /></p></div>
+                <div class="addr"><label>报修地址</label><p><a href="">请选择</a></p></div>
+                <div class="type"><label>报修类型</label><p><select><option>请选择</option></select></p></div>
+                <div class="category"><label>报修分类</label><p><select><option>请选择</option></select></p></div>
               </div>
               <div class="details">
                 <p class="slide"><label>报修详情</label></p>
